pkg/gox/testdata/errors/non_node_ternary_branch.gox
package main

import gf "github.com/jin-wu/goframe/pkg/goframe"

func View(show bool) gf.Node {
	return <main>{show ? "yes" : <p>No</p>}</main>
}
